--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                   ><span style="color: #f09275">s</span
                   ><span style="color: #f0e475">t</span
                   ><span style="color: #aaf075">m</span
-                  ><span style="color: #75f0aa">a</span>
-                  <span style="color: #7592f0">s</span>
+                  ><span style="color: #75f0aa">as</span>
                 </div>
                 <!--             <div class="card__text__greeting__hbd">Happy Birthday</div> -->
                 <div>Hằng!</div>
